# gldemo

./: .clang-format  CMakeLists.txt  README.md  README.txt  fragment.glsl  main.c  misc.c  opengl.c  stuff.h  vertex.glsl  win32.c
